--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -48,7 +48,10 @@
       2
     ],
     "react/require-default-props": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "react/function-component-definition": "off",
+    "no-unused-vars": "off",
+    "react/jsx-no-useless-fragment": "off"
   },
   "settings": {
     "import/resolver": {
