--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "axios": "^0.27.2",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react": "^7.30.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.32.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
